src/main/java/com/example/study/practical_programming/self/bad/ship/Ship.java
package com.example.study.practical_programming.self.bad.ship;

public class Ship {
    private String modelName;
    private Engine engine;
    private float speed;
    private float direction;
    private long coverablePeople;
}
